libs/@local/hashql/syntax-jexpr/src/parser/object/snapshots/hashql_syntax_jexpr__parser__object__literal__tests__parse_boolean_literals.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/object/literal.rs
description: Parses a boolean true literal
expression: "{\"#literal\": true}"
---
Expr#4294967040@1
  ExprKind (Literal)
    LiteralExpr#4294967040@0
      LiteralKind (True)
