libs/@local/hashql/syntax-jexpr/src/parser/object/snapshots/hashql_syntax_jexpr__parser__object__literal__tests__parse_duplicate_type_key.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/object/literal.rs
description: "Rejects duplicate #type keys"
expression: "{\"#literal\": 42, \"#type\": \"Int\", \"#type\": \"Float\"}"
---
[31m[parser::object::duplicate-key] Error:[0m Parser
   ╭─[ <unknown>:1:34 ]
   │
 1 │ {"#literal": 42, "#type": "Int", "#type": "Float"}
   │                  ───┬───         ───┬───  
   │                     │               ╰───── Duplicate key
   │                     │                     
   │                     ╰───────────────────── First occurrence of `#type`
   │ 
   │ Help: J-Expr does not allow duplicate keys in the same object. Each key must be unique.
───╯
