libs/@local/hashql/syntax-jexpr/src/parser/object/snapshots/hashql_syntax_jexpr__parser__object__literal__tests__parse_incomplete.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/object/literal.rs
description: Parses with a sudden EOF
expression: "{\"#literal\": "
---
[31m[lexer::unexpected-eof] Error:[0m Unexpected end of file
   ╭─[ <unknown>:1:14 ]
   │
 1 │ {"#literal":
   │              │ 
   │              ╰─ Unexpected end of file, expected string, number, `true`, `false`, or `null`
   │ 
   │ Help: The file ended where a value was expected. Add a valid JSON value (string, number, object, array, true, false, or null).
───╯
