libs/@local/hashql/syntax-jexpr/src/parser/object/snapshots/hashql_syntax_jexpr__parser__object__literal__tests__parse_invalid_literal.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/object/literal.rs
description: Rejects invalid literal values
expression: "{\"#literal\": {\"invalid\": \"object\"}}"
---
[31m[parser::object::invalid-literal] Error:[0m Parser
   ╭─[ <unknown>:1:14 ]
   │
 1 │ {"#literal": {"invalid": "object"}}
   │              ┬  
   │              ╰── Unexpected token
   │ 
   │ Help: Expected string, number, `true`, `false`, or `null` at this position
───╯
