libs/@local/hashql/syntax-jexpr/src/parser/object/snapshots/hashql_syntax_jexpr__parser__object__literal__tests__parse_simple_literal.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/object/literal.rs
description: Parses a simple string literal
expression: "{\"#literal\": \"hello\"}"
---
Expr#4294967040@1
  ExprKind (Literal)
    LiteralExpr#4294967040@0
      LiteralKind (String)
        StringLiteral (hello)
